blocks/form/form.css
/* ... */
main .get-a-quote-form-alternate form {
    margin:0;
    display: block;
}

main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='privacy-policy']  p,
main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='policy']  p{
    font-size: 0.75rem;
    padding-top: 0.5rem;
    padding-bottom: 1rem;
}

main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='header'] {
    background-color: var(--color-yellow);
    font-size: var(--heading-font-size-m);
    padding: 1rem 2rem;
    margin-bottom: 1rem;
    font-weight: normal;
}

main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='header'] h3,
main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='header'] h2{
    color: var(--color-black);
}

main .campaign-form.form .fragment-wrapper[data-id^='header'] {
    font-size: var(--heading-font-size-m);
    padding: 2rem 0.8rem 0;
    margin-bottom: 1rem;
    font-weight: normal;
    gap:0;
}

main .get-a-quote-form-alternate.center-header form .fragment-wrapper[data-id^='header'] {
    text-align: center;
}

main .get-a-quote-form-alternate.no-header-color form .fragment-wrapper[data-id^='header'] {
    background-color: unset;
}

main .footer-subscription-form  form {
    gap: 0;
}

main .get-a-quote-form-alternate.grey-background form {
    background-color: var(--color-gray);
}

main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='header'] > div > p {
    font-size: 1rem;
}

main .get-a-quote-form-alternate form .fragment-wrapper[data-id^='header'] a{
    color: #1a242b;
    text-decoration: underline;
}

main .footer-subscription-form.form-container {
    margin:0;
    padding-top: 1rem;
}

main .footer-subscription-form {
    max-width: var(--section-width);
    margin: 2rem auto;
    padding: 0 1.5rem;
}

main .footer-subscription-form .button-wrapper.field-wrapper.submit-wrapper button{
    background-color: var(--color-button-default);
    color:var(--color-white);
}


main .footer-subscription-form #get-informed-stay-protected{
    color:var(--color-blue);
}

main .footer-subscription-form a[href="https://www.stericycle.com/en-us/privacy-policy"] {
    text-decoration: underline;
    font-size: 0.87rem;
}

main .footer-subscription-form form .fragment-wrapper > div p:nth-of-type(2) {
    margin-bottom: 0.4rem;
}

@media (max-width: 1000px) {
    main .footer-subscription-form form .panel-wrapper {
        grid-template-columns: 1fr;
    }
}

main .campaign-form.form {
    box-shadow: 0 0 4px 0 rgba(0 0 0 / 25%);
    background-color: var(--color-white);
    border-radius: 4px;
    max-width: 300px;
}

main .campaign-form.form form {
    display: block;
    margin-top: 2rem;
    background-color: var(--color-gray);
}

main .two-column.form-container .form-wrapper {
    justify-self: flex-end;
}

@media (max-width: 1000px) {
    main .two-column.form-container .default-content-wrapper {
        width: 90%;
    }

    main .two-column.form-container .form-wrapper {
        width:90%;
    }

    main .form form .panel-wrapper.field-requesttype, main .form form .panel-wrapper.field-frequncy{
       grid-template-columns: 1fr 1fr;
    }

    main .form form .panel-wrapper.field-requesttype, main .form form .panel-wrapper.field-frequncy .radio-wrapper.field-quote-type{
        grid-column: span 1;
        width: 100%;
        padding: 13px 0;
        margin-top: 0;
    }

    main .section.two-column.form-container {
        display: table-row;
    }

}

main .two-column.form-container {
    display: grid;
    grid-template-columns: minmax(0, 884px) minmax(0, 436px); /* Set max-width for each column */
    grid-auto-rows: auto;
    margin: auto;
    gap: 0;
    justify-content: center;
}

main .two-column.full-width.form-container {
    display: grid;
    grid-template-columns: 65% 35%;; /* Set max-width for each column */
    grid-auto-rows: auto;
    margin: auto;
    gap: 0;
    justify-content: flex-start;
}

main .two-column.full-width.form-container .form-wrapper {
    max-width: 612px;
}

main .two-column.form-container > div {
    grid-column: 1;
}

/* Place the last child in the second column */
main .two-column.form-container > div:nth-last-child(1) {
    grid-column: 2;
    grid-row: 1 / span 4;
}

